<resources>
    <string name="app_name" translatable="false">MyLegion</string>
    <string name="contentDescription" translatable="false">image French Foreign Legion</string>
    <string name="b_list_choice_0" translatable="false">\  1 RE</string>
    <string name="b_list_choice_1" translatable="false">\  1 REC</string>
    <string name="b_list_choice_2" translatable="false">\  1 REG</string>
    <string name="b_list_choice_3" translatable="false">\  2 REG</string>
    <string name="b_list_choice_4" translatable="false">\  2 REI</string>
    <string name="b_list_choice_5" translatable="false">\  2 REP</string>
    <string name="b_list_choice_6" translatable="false">\  3 REI</string>
    <string name="b_list_choice_7" translatable="false">\  4 RE</string>
    <string name="b_list_choice_8" translatable="false">\  13 DBLE</string>
    <string name="b_list_choice_9" translatable="false">\  DLEM</string>
    <string name="b_list_choice_10" translatable="false">\  GRLE</string>
    <string name="spinner_default">Default</string>
    <string name="spinner_ru">Russian</string>
    <string name="button_war">military campaigns</string>
    <string name="button_tradition">traditions</string>
    <string name="button_history_creation">history of creation</string>
    <string name="button_officially">officially</string>
    <string name="button_preparation">preparation</string>
    <string name="button_question_answer">question/answer</string>
    <string name="button_psychologist">psychologist</string>
    <string name="button_security_service">security service</string>
    <string name="button_tests">tests</string>
    <string name="button_videos_preparations7">\ video: parkour</string>
    <string name="button_videos_preparations8">\ video: commando</string>
    <string name="button_videos_preparations9">\ video: jungle</string>
    <string name="button_videos_preparations10">\ video: service</string>
    <string name="text_advice1"><i>Before you go to the selection, collect and analyze
more information. Compare your desires and opportunities. Think carefully before you go -
do you really need a Legion.</i>
</string>
    <string name="text_advice2"><i>Get your health in order. Do not neglect this,
as France does not want to hire people with health problems.
The better you prepare, the more profitable you will look against the background of others
during the selection.
If there were operations, take with you copies of certificates that there are no health consequences,
translate them. The doctor may take them into consideration </i>
</string>
    <string name="text1_legion_today">\"I\'m not saying that legionnaire is the best, but he is
among the best!
\nThey are so good because they are volunteers. They chose to serve in the Foreign Legion and this is
a personal choice of everyone.
\nThey have thrown themselves a new challenge in life and have every reason to win.\"
\n\n<b>Colonel Pierre Framager</b>
</string>
    <string name="text2_legion_today">Today, the Legion\'s strength is almost 9,000 people.
\nRepresentatives of more than 140 nationalities serve here together.
\nLegionnaires serve under contract and are commanded by French officers.
\n\nToday, the Foreign Legion consists of a General Staff and eleven regiments.
\n\nThree of these, three constitute the command of the Foreign Legion and report directly to the
General commanding the Foreign Legion.
\nThey help in performing specific tasks for the benefit of the entire structure (general management,
recruitment, training).
\n\nSix regiments have been formed for use as part of the Ground Task Force (FOT).
\nThey participate in all external operations and missions on the national territory.
\n\nTwo regiments make up the land units of the sovereign forces abroad and serve in Guiana and Mayotte.
  </string>
    <string name="text3_legion_today"><b>The status established by law</b>\n\n
\nArticle L 4132-7 of the Code of Defense specifies \”as an exception to the condition of citizenship
a foreign citizen may be admitted to service under a contract \".
\nThe Law of March 24, 2005 \“On the general status of military personnel\”. The main feature of the
Foreign Legion is its ability, recognized by this law, to recruit foreigners who will be
assigned to serve in France.
\nThe status of \"foreign\", enshrined in the decree of September 12, 2008 on military personnel
serving as foreigners, is intended to regulate this ability.
Article 1 of this decree states that \”military personnel serving in a foreign capacity are allowed
to serve in the formations of the Foreign Legion\".
\n\n<b>Combat training</b>
\n\nThe Foreign Legion consists exclusively of infantry regiments with lightly armored vehicles.
\nA legionnaire enlists in a Foreign Legion, not in any regiment or in a specific specialty.
\nUpon completion of initial training lasting four months, legionnaires are assigned to a
Legion regiment as needed. Thus, everyone should be able to hold any combat position.
\n\nConsisting from foreigners.
\nAny a serviceman who has foreign citizenship serves under a contract, regardless of his rank.
\nThis provision applies to all categories of ranks: officers, non-commissioned officers or military personnel of the appropriate rank
\n\n<b>Ander by the French command</b>
\n\nThe Foreign Legion is commanded by French officers from the ground forces. As an exception,
in the amount of 10%, the Legion recruits officers serving in a foreign capacity
(former legionnaires and non-commissioned officers).
\nThe General commanding the
Foreign Legion and the officers assigned to the regiments are the guarantors of the legionnaire\'s
loyalty to France.
\n\n<b>90% of foreigners in the service of France</b>
\n\nMore than 34% of the inhabitants of Western Europe, almost 28% of Slavs, about 12% of immigrants
from the African continent, 13% of Asians, 13% from Latin America.
\nFrench speakers, mostly French, make up 11% of the total number of people employed.
\nThe presence of a minimum number of native French speakers in the squad contributes to the learning
of the French
language necessary to understand orders.
\nIn 2023, the legion will recruit about 1,500 legionnaires.
\n\n<b>Strict selection</b>
\n\nThe candidate can begin selection for service with a simple presentation of a passport.
\nThis opportunity, offered exclusively for the recruitment of volunteers to the Foreign Legion,
is regulated by the 2005 law.
The Foreign Legion agrees to confirm the legionnaire\'s past, provided that it is fully known.
\nAfter checking the candidates\' applications, their past is carefully studied.
\nThis provision provides
a new opportunity for those who want to turn the page and start from scratch.
\nThe Legion welcomes all volunteers as soon as they pass the selection tests.
Only a little more
than 20% succeed. Only the best are recruited into the Foreign Legion.
\nThe principle of recruitment as a foreigner allows a French candidate to apply to the Legion,
even if he serves in the status of a "foreigner", like his foreign comrades.
    </string>
    <string name="text_preparation1">WHAT TO PREPARE FOR WHEN ENTERING \n\n
<b>Medical examination:</b>\n
- body mass index,\n
- dental examination,\n
- vision check,\n
- hearing check,\n
- joint inspection,\n
- analysis collection,\n
- general body examination.\n\n
<b>Entrance tests for physical fitness:</b>\n
- pull-ups at least 5 times, \n
- test \"Luke Legere\",\n
- Swimming. At least 25 meters in any style.\n\n
<b>Psychotechnical tests:</b>\n
- logic tests,\n
- mindfulness tests,\n
- spatial thinking tests.\n\n
<b>Interview with a psychologist:</b>\n
- communication about your past,\n
- determination of motivation,\n
- identification of deviations,\n
- disclosure of personality, etc.\n\n
<b>Interview with the Gestapo security service:</b>\n
- communication about your past,\n
- determination of motivation,\n
- identification of deviations,\n
- disclosure of personality,\n
- stress tolerance test,\n
- study of life experience.\n\n
<b>The interview can be conducted in an aggressive form!</b>\n\n
WHAT TO PREPARE FOR IN THE SERVICE \n\n
<b>Physically.</b>\n
- Running at a distance of 8 km.\n
- Marches in full gear and weapons (the load can be up to 50 kg per person) at a distance
- up to 30 km per day (the march can last several days).\n
- Obstacle courses.\n
- The experience of the commando.\n
- Activity both during the day and at night, without the possibility of sleep.\n
- Service in various conditions: desert, jungle, mountains.\n\n
<b>Morally.</b>\n
- Strict subordination and discipline.\n
- Social adaptation. Multinational team.\n
- Restriction in civil rights.\n
- Does not correspond to the reality of expectations.\n
- Lack of frequent opportunities to communicate with loved ones and travel home.\n
- Language barrier. The need to learn French.
</string>
    <string name="text_preparation2">PREPARATION\n\n
<b>Medical examination.</b>\n\n
<u>Body mass index.</u>\n
Have a \“body mass index\“ from 18 to 30 kg/m2 (BMI = weight/Height 2)*
\nExample: the body mass index of a man with a height of 1.75 m and a weight of 72 kg
BMI = 72 kg / (1.75 m*1.75 m) = 23.5 kg/m2.\n
Bring your body\'s indicators within the limits of the desired values. Make the right diet for weight loss or
weight gain.
\nTake advantage of the numerous publications and articles on this issue on the Internet.\n\n
<u>Dental examination.</u>
\nHealthy or well-groomed teeth.\n
The chewing coefficient is greater than or equal to 40%.\n
Have an examination at the dentist at home. Heal all the sick teeth, ask about your chewing
coefficient.
\nIn France, dental treatment is very expensive, and the quality of treatment in the medical service at
Legione leaves much to be desired.
\nAt the selection, if you have serious problems with
your teeth, you will be rejected.\n\n
<u>Vision check.</u>\n
It is carried out in a simple way – viewing the table at a distance by changing the eye in turn.
You can pass the same check everywhere at home.
\nThere is also a check for color blindness - viewing pictures of different colors.
\nIf you have poor eyesight, take glasses, it is possible to serve with glasses.
\nGlasses, but not lenses!
\nLenses are not allowed during selection.\n\n
<u>Hearing check.</u>\n
It is carried out by placing you in an isolated room, putting on headphones and giving
sound signals of different frequencies and volume, after hearing which you must press the button.
\nBefore the trip, check the ears, if necessary, rinse with a doctor.
\nA link to a similar test will be below.\n\n
<u>Joint examination, collection of tests, general examination of the body.</u>\n
Before the trip, take tests and see what you need to work on.
\nAre there any problems.
\nDrink a course of vitamins and a course of chondroprotectors for joints
(there are very heavy loads on the joints in the Legion).
\nIn no case do not take drugs and
other prohibited substances before the trip – you will take a lot of different tests,
including for drugs.
\nThe joints will be checked by a doctor – twist, bend, feel.
\nIt is desirable that they do not
have scars from operations.
You will also pass all other measurements: height, weight, pressure, etc.
</string>
    <string name="text_preparation6">ON THE SERVICE\n\n
<b>Preparation.</b>\n
If you have been selected with the last of your strength, then you will have a hard time during the service.
\nThe Legion has a lot of workloads.
\nThat is why, before the trip, you should take care of
good physical fitness and put your health in order.
\nHundreds of people come to the legion,but only 20% arrive, and some of them leave the unit after
selection, and some more during the first contract.
\nAll this is due to loss of motivation, undermined health, stress, language barrier.\n
Do not stop working on yourself, on your motivation, on your health and
training even after signing the contract. Below will be links to what legionnaires face.
</string>
</resources>