<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_info"
    android:orientation="vertical"
    tools:context=".candidate.InfoFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:scaleType="centerCrop"
                android:src="@drawable/header_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/padding"
                android:text="@string/text_preparation1"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/padding"
                android:text="@string/text_preparation6"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_normal" />

            <include
                layout="@layout/layout_advice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:padding="@dimen/padding"
                android:text="@string/text_advice1"
                android:textColor="@color/black"
                android:textSize="@dimen/size_text_normal" />

            <Button
                android:id="@+id/b_preparation7"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/padding"
                android:background="@drawable/custom_buttons_main"
                android:drawableStart="@mipmap/button_website"
                android:gravity="start|center_vertical"
                android:text="@string/button_videos_preparations7"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_button" />

            <Button
                android:id="@+id/b_preparation8"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/padding"
                android:background="@drawable/custom_buttons_main"
                android:drawableStart="@mipmap/button_website"
                android:gravity="start|center_vertical"
                android:text="@string/button_videos_preparations8"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_button" />

            <Button
                android:id="@+id/b_preparation9"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/padding"
                android:background="@drawable/custom_buttons_main"
                android:drawableStart="@mipmap/button_website"
                android:gravity="start|center_vertical"
                android:text="@string/button_videos_preparations9"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_button" />

            <Button
                android:id="@+id/b_preparation10"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="@dimen/padding"
                android:background="@drawable/custom_buttons_main"
                android:drawableStart="@mipmap/button_website"
                android:gravity="start|center_vertical"
                android:text="@string/button_videos_preparations10"
                android:textColor="@color/white"
                android:textSize="@dimen/size_text_button" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>