<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_medic"
    android:orientation="vertical"
    tools:context=".candidate.MedicFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:contentDescription="@string/contentDescription"
            android:scaleType="centerCrop"
            android:src="@drawable/header_medic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/padding"
            android:text="@string/text_preparation2"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_normal" />

        <include
            layout="@layout/layout_advice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:padding="@dimen/padding"
            android:text="@string/text_advice2"
            android:textColor="@color/black"
            android:textSize="@dimen/size_text_normal" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>