<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_history"
    tools:context=".history.HistoryActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/b_history_creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_buttons_history"
            android:onClick="showHistoryCreations"
            android:padding="@dimen/padding"
            android:text="@string/button_history_creation"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_button" />
        <Button
            android:id="@+id/b_war"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_buttons_history"
            android:onClick="showWar"
            android:padding="@dimen/padding"
            android:text="@string/button_war"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_button" />

        <Button
            android:id="@+id/b_tradition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_buttons_history"
            android:onClick="showTradition"
            android:padding="@dimen/padding"
            android:text="@string/button_tradition"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_button" />


    </LinearLayout>
</FrameLayout>