<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_practice"
    tools:context=".practice.PracticeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/b_psychologist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_buttons_history"
            android:onClick="showButtonAction"
            android:padding="@dimen/padding"
            android:text="@string/button_psychologist"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_button" />

        <Button
            android:id="@+id/b_security_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_buttons_history"
            android:onClick="showButtonAction"
            android:padding="@dimen/padding"
            android:text="@string/button_security_service"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_button" />

        <Button
            android:id="@+id/b_tests"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/custom_buttons_history"
            android:onClick="showButtonAction"
            android:padding="@dimen/padding"
            android:text="@string/button_tests"
            android:textColor="@color/white"
            android:textSize="@dimen/size_text_button" />
    </LinearLayout>
</FrameLayout>